--- a/startup-react-pt1/src/play/play.css
+++ b/startup-react-pt1/src/play/play.css
@@ -36,6 +36,7 @@
   align-items: center;
   justify-content: space-around;
   background-color: rgb(0, 61, 165);
+  max-width: 100vw;
 }
 
 
